# apeclck

./: .env  .env.example
app/: Dockerfile  main.go
app/api/: handlers.go
app/shortener/: service.go
app/storage/: redis.go
client/: Dockerfile  pyproject.toml
client/bot/: config.py  dialog.py  main.py  models.py  states.py  utils.py  widgets.py
