[project]
name = "apeclck-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.10",
  "aiogram-dialog>=2.2.0",
  "httpx>=0.27",
  "redis>=5.0",
  "pydantic>=2.8",
  "pydantic-settings>=2.11.0",
]

[tool.uv]
dev-dependencies = []

[tool.ruff]
target-version = "py313"
unsafe-fixes = true
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "INP001",
    "RUF001",
    "RUF002",
    "RUF003",
    "ARG001",
    "D103",
    "ANN003",
    "TD002",
    "TD003",
    "FIX002",
    "D100",
    "D401",
    "D101",
    "D102",
    "D107",
    "TRY401",
    "TRY300",
    "PGH003",
    "ANN401",
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = true
lines-after-imports = 2

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 10
max-returns = 5
max-statements = 40

[tool.pyright]
pythonVersion = "3.13"
include = ["app"]
exclude = [".venv", "**/__pycache__"]
venvPath = "."
venv = ".venv"

typeCheckingMode = "strict"

reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportArgumentType = false
reportMissingTypeArgument = false
reportUnkownParametrType = false
reportCallIssue = false
reportMissingParameterType = true
reportMissingReturnType = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
reportUninitializedInstanceVariable = true
reportReturnType = true
reportGeneralTypeIssues = true
reportCallInDefaultInitializer = true
reportInvalidTypeVarUse = true
reportOverlappingOverload = true
reportUnnecessaryCast = true
reportUnnecessaryIsInstance = true
reportUnusedImport = true
reportUnusedFunction = true
reportUnusedClass = true
reportUnusedVariable = true
reportDuplicateImport = true
reportConstantRedefinition = true
reportUndefinedVariable = true
reportUnboundVariable = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
strictParameterNoneValue = true
